edited index.html and index.css

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 		<section class="text-center mt-5" id="landing">
 			
 			<!-- header -->
-			<h1>Full Stack Web Developer</h1>
+			<h1>Agricultural and Biosystems Engineer | Full Stack Web Developer</h1>
 			<!-- paragraph -->
-			<p>Hi! I'm Ben and I love building things from scratch</p>
+			<p>Hello, I'm Ben, and I'm on a journey of transformation,  I started my career in Agricultural Engineering, deeply committed to finding creative solutions for a sustainable future. But I also had a burning desire to dive into the exciting world of web development.</p>
 			<!-- image -->
 			<img src="images/dp.png" class="img-fluid" id="profile">
 			<!-- anchor -->
