--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<!-- paragraph -->
 			<p>Hello, I'm Ben, and I'm on a journey of transformation,  I started my career in Agricultural Engineering, deeply committed to finding creative solutions for a sustainable future. But I also had a burning desire to dive into the exciting world of web development.</p>
 			<!-- image -->
-			<img src="images/dp.png" class="img-fluid" id="profile">
+			<img src="images/profile.jpg" class="img-fluid" id="profile">
 			<!-- anchor -->
 			<a href="mailto:benjralejo@gmail.com" class="btn btn-success btn-lg mt-3">Let's Work Together</a>
 
